{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 714,
  "lineage": "29c998bd-ccdb-e257-aa65-e4adaeadfd44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "VCCR2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e34e88cfccb7c1d6",
            "domain": "vpc",
            "id": "eipalloc-0ed2d5412982532f7",
            "instance": "i-0eacd102a58900222",
            "network_interface": "eni-05a43fb6f0cd0ce1a",
            "private_dns": "ip-10-0-1-8.eu-central-1.compute.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-3-126-25-103.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.25.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VCCR2-MMM"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.vipnet_coordinator_VPC2",
            "aws_security_group.Vipnet_VPC2_SG",
            "aws_subnet.Public_VPC2_Subnet",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "VPC2_private_instance3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07b5c5b5c2deb885d",
            "domain": "vpc",
            "id": "eipalloc-0dfd909ef09007ade",
            "instance": "i-03dd8558fe5a79814",
            "network_interface": "eni-09eefe59846b556e8",
            "private_dns": "ip-10-0-1-235.eu-central-1.compute.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-52-29-224-114.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.224.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC2_private_instance3"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.VPC2_private_instance3",
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC2_SG",
            "aws_subnet.Private_VPC2_Subnet3",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC1_private_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-04b6bed9aa0813c7d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04b6bed9aa0813c7d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MurzabaevMM",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1b11d978440532e",
            "private_dns": "ip-10-0-0-245.eu-central-1.compute.internal",
            "private_ip": "10.0.0.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c48d0b24eef56514",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dcd951b136d18417"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048fb5a014dfce5c8",
            "tags": {
              "Name": "tunnel-1-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcd951b136d18417"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC1_SG",
            "aws_subnet.Private_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC1_private_instance_win1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00cdfecd6e5011ae7",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-04b1cfcd32c029e92",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04b1cfcd32c029e92",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MurzabaevMM",
            "monitoring": false,
            "primary_network_interface_id": "eni-0159398657ce5c7f3",
            "private_dns": "ip-10-0-0-240.eu-central-1.compute.internal",
            "private_ip": "10.0.0.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0edb7df1311f93aad",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dcd951b136d18417"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048fb5a014dfce5c8",
            "tags": {
              "Name": "Client-1-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcd951b136d18417"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC1_SG",
            "aws_subnet.Private_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC2_private_instance-win2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00cdfecd6e5011ae7",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-0b18a11063a3c2c4d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b18a11063a3c2c4d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MurzabaevMM",
            "monitoring": false,
            "primary_network_interface_id": "eni-06f521ea8b479d7fa",
            "private_dns": "ip-10-0-1-125.eu-central-1.compute.internal",
            "private_ip": "10.0.1.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d0ea2275ccaaa036",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023aff2b74a7644a0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059515d8f54c4980d",
            "tags": {
              "Name": "Client-2-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023aff2b74a7644a0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC2_SG",
            "aws_subnet.Private_VPC2_Subnet1",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC2_private_instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-09cca5766330404fb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09cca5766330404fb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MurzabaevMM",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4eedfaec08c043e",
            "private_dns": "ip-10-0-1-89.eu-central-1.compute.internal",
            "private_ip": "10.0.1.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fd016d11734eca64",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023aff2b74a7644a0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059515d8f54c4980d",
            "tags": {
              "Name": "tunnel-21-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023aff2b74a7644a0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC2_SG",
            "aws_subnet.Private_VPC2_Subnet1",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC2_private_instance2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-059f3d67f83686457",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-059f3d67f83686457",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MurzabaevMM",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa3fc9ed25ad642c",
            "private_dns": "ip-10-0-1-145.eu-central-1.compute.internal",
            "private_ip": "10.0.1.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d6ae478fbe772698",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023aff2b74a7644a0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee0baa4bad24f80",
            "tags": {
              "Name": "tunnel-22-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023aff2b74a7644a0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC2_SG",
            "aws_subnet.Private_VPC2_Subnet2",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC2_private_instance3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-03dd8558fe5a79814",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03dd8558fe5a79814",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MurzabaevMM",
            "monitoring": false,
            "primary_network_interface_id": "eni-09eefe59846b556e8",
            "private_dns": "ip-10-0-1-235.eu-central-1.compute.internal",
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07af83bc0ad147b8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023aff2b74a7644a0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8fa9200166900d5",
            "tags": {
              "Name": "tunnel-23-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023aff2b74a7644a0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.Tunnel_VPC2_SG",
            "aws_subnet.Private_VPC2_Subnet3",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vipnet_coordinator_VPC1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f80acd58e1c9951a",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-03a641c704e6f36d1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03a641c704e6f36d1",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-01c0efd9b1effedb9",
            "private_dns": "ip-10-0-0-104.eu-central-1.compute.internal",
            "private_ip": "10.0.0.104",
            "public_dns": "ec2-52-57-173-130.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.173.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-092115e8df10c1227",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fbc8f3fc3bd485f8"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07a67e1b404b18280",
            "tags": {
              "Name": "VCCR1-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fbc8f3fc3bd485f8"
            ]
          },
          "dependencies": [
            "aws_security_group.Vipnet_VPC1_SG",
            "aws_subnet.Public_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vipnet_coordinator_VPC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f80acd58e1c9951a",
            "arn": "arn:aws:ec2:eu-central-1:486074612436:instance/i-0eacd102a58900222",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0eacd102a58900222",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-05a43fb6f0cd0ce1a",
            "private_dns": "ip-10-0-1-8.eu-central-1.compute.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-3-124-209-20.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.209.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ac37888c839662c1",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-070658070a4d5b6aa"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-004cc343c546b1419",
            "tags": {
              "Name": "VCCR2-MMM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-070658070a4d5b6aa"
            ]
          },
          "dependencies": [
            "aws_security_group.Vipnet_VPC2_SG",
            "aws_subnet.Public_VPC2_Subnet",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPC1_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0092c54cd269cc089",
            "owner_id": "486074612436",
            "tags": {
              "Name": "VPC1 Internet Gateway"
            },
            "vpc_id": "vpc-0f07eb47608bcc762"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPC2_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08c1287da3fb63c32",
            "owner_id": "486074612436",
            "tags": {
              "Name": "VPC2 Internet Gateway"
            },
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "VPC1_VPN_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "11.0.0.0/8",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f0beac0187937533681673593",
            "instance_id": "i-03a641c704e6f36d1",
            "instance_owner_id": "486074612436",
            "nat_gateway_id": "",
            "network_interface_id": "eni-01c0efd9b1effedb9",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f0beac018793753",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_instance.vipnet_coordinator_VPC1",
            "aws_route_table.VPC1_route_table",
            "aws_security_group.Vipnet_VPC1_SG",
            "aws_subnet.Public_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "VPC1_VPN_to_VPC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.1.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f0beac01879375380081744",
            "instance_id": "i-03a641c704e6f36d1",
            "instance_owner_id": "486074612436",
            "nat_gateway_id": "",
            "network_interface_id": "eni-01c0efd9b1effedb9",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f0beac018793753",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_instance.vipnet_coordinator_VPC1",
            "aws_route_table.VPC1_route_table",
            "aws_security_group.Vipnet_VPC1_SG",
            "aws_subnet.Public_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "VPC1_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0092c54cd269cc089",
            "id": "r-rtb-02f0beac0187937531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f0beac018793753",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.VPC1_GW",
            "aws_route_table.VPC1_route_table",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "VPC2_VPN_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "11.0.0.0/8",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04761d3eccd9dc0323681673593",
            "instance_id": "i-0eacd102a58900222",
            "instance_owner_id": "486074612436",
            "nat_gateway_id": "",
            "network_interface_id": "eni-05a43fb6f0cd0ce1a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_instance.vipnet_coordinator_VPC2",
            "aws_route_table.VPC2_route_table",
            "aws_security_group.Vipnet_VPC2_SG",
            "aws_subnet.Public_VPC2_Subnet",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "VPC2_VPN_to_VPC1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04761d3eccd9dc0323482919157",
            "instance_id": "i-0eacd102a58900222",
            "instance_owner_id": "486074612436",
            "nat_gateway_id": "",
            "network_interface_id": "eni-05a43fb6f0cd0ce1a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_instance.vipnet_coordinator_VPC2",
            "aws_route_table.VPC2_route_table",
            "aws_security_group.Vipnet_VPC2_SG",
            "aws_subnet.Public_VPC2_Subnet",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "VPC2_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c1287da3fb63c32",
            "id": "r-rtb-04761d3eccd9dc0321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.VPC2_GW",
            "aws_route_table.VPC2_route_table",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02f0beac018793753",
            "owner_id": "486074612436",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC1 Route Table"
            },
            "vpc_id": "vpc-0f07eb47608bcc762"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC2_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04761d3eccd9dc032",
            "owner_id": "486074612436",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC2 Route Table"
            },
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC1_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e015420af19b7051",
            "route_table_id": "rtb-02f0beac018793753",
            "subnet_id": "subnet-07a67e1b404b18280"
          },
          "dependencies": [
            "aws_route_table.VPC1_route_table",
            "aws_subnet.Public_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC2_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012e29c97d8219f21",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "subnet_id": "subnet-004cc343c546b1419"
          },
          "dependencies": [
            "aws_route_table.VPC2_route_table",
            "aws_subnet.Public_VPC2_Subnet",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_route_association_VPC1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fbc5a6f0e07376e",
            "route_table_id": "rtb-02f0beac018793753",
            "subnet_id": "subnet-048fb5a014dfce5c8"
          },
          "dependencies": [
            "aws_route_table.VPC1_route_table",
            "aws_subnet.Private_VPC1_Subnet",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_route_association_VPC2-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08061c478eb301cfc",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "subnet_id": "subnet-059515d8f54c4980d"
          },
          "dependencies": [
            "aws_route_table.VPC2_route_table",
            "aws_subnet.Private_VPC2_Subnet1",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_route_association_VPC2-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042297c5fb7630df6",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "subnet_id": "subnet-0cee0baa4bad24f80"
          },
          "dependencies": [
            "aws_route_table.VPC2_route_table",
            "aws_subnet.Private_VPC2_Subnet2",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_route_association_VPC2-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f610083daf427c2",
            "route_table_id": "rtb-04761d3eccd9dc032",
            "subnet_id": "subnet-0a8fa9200166900d5"
          },
          "dependencies": [
            "aws_route_table.VPC2_route_table",
            "aws_subnet.Private_VPC2_Subnet3",
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Tunnel_VPC1_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:security-group/sg-0dcd951b136d18417",
            "description": "Tunnel SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcd951b136d18417",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Tunnel_SG",
            "name_prefix": null,
            "owner_id": "486074612436",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Tunnel VPC1 SG",
              "Name": "Tunnel VPC1 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07eb47608bcc762"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Tunnel_VPC2_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:security-group/sg-023aff2b74a7644a0",
            "description": "Tunnel SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023aff2b74a7644a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Tunnel_SG",
            "name_prefix": null,
            "owner_id": "486074612436",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Tunnel VPC2 SG",
              "Name": "Tunnel VPC2 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Vipnet_VPC1_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:security-group/sg-0fbc8f3fc3bd485f8",
            "description": "Vipnet SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbc8f3fc3bd485f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Vipnet_SG",
            "name_prefix": null,
            "owner_id": "486074612436",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Vipnet VPC1 SG",
              "Name": "Vipnet VPC1 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07eb47608bcc762"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Vipnet_VPC2_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:security-group/sg-070658070a4d5b6aa",
            "description": "Vipnet SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070658070a4d5b6aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Vipnet_SG",
            "name_prefix": null,
            "owner_id": "486074612436",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Vipnet VPC2 SG",
              "Name": "Vipnet VPC2 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_VPC1_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:subnet/subnet-048fb5a014dfce5c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-048fb5a014dfce5c8",
            "map_public_ip_on_launch": false,
            "owner_id": "486074612436",
            "tags": {
              "Name": "Private VPC1 Subnet"
            },
            "vpc_id": "vpc-0f07eb47608bcc762"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_VPC2_Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:subnet/subnet-059515d8f54c4980d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.64/26",
            "id": "subnet-059515d8f54c4980d",
            "map_public_ip_on_launch": false,
            "owner_id": "486074612436",
            "tags": {
              "Name": "Private VPC2 Subnet1"
            },
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_VPC2_Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:subnet/subnet-0cee0baa4bad24f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.128/26",
            "id": "subnet-0cee0baa4bad24f80",
            "map_public_ip_on_launch": false,
            "owner_id": "486074612436",
            "tags": {
              "Name": "Private VPC2 Subnet2"
            },
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_VPC2_Subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:subnet/subnet-0a8fa9200166900d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.192/26",
            "id": "subnet-0a8fa9200166900d5",
            "map_public_ip_on_launch": false,
            "owner_id": "486074612436",
            "tags": {
              "Name": "Private VPC2 Subnet3"
            },
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_VPC1_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:subnet/subnet-07a67e1b404b18280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-07a67e1b404b18280",
            "map_public_ip_on_launch": true,
            "owner_id": "486074612436",
            "tags": {
              "Name": "Public VPC1 Subnet"
            },
            "vpc_id": "vpc-0f07eb47608bcc762"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_VPC2_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:subnet/subnet-004cc343c546b1419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/26",
            "id": "subnet-004cc343c546b1419",
            "map_public_ip_on_launch": true,
            "owner_id": "486074612436",
            "tags": {
              "Name": "Public VPC2 Subnet"
            },
            "vpc_id": "vpc-0eaa2ca0786efe0b3"
          },
          "dependencies": [
            "aws_vpc.VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:vpc/vpc-0f07eb47608bcc762",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ffb87ee8451816b9",
            "default_route_table_id": "rtb-066c52ab6739e18dd",
            "default_security_group_id": "sg-098493d6e5b39732d",
            "dhcp_options_id": "dopt-984eb4f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f07eb47608bcc762",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-066c52ab6739e18dd",
            "owner_id": "486074612436",
            "tags": {
              "Name": "VPC1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:486074612436:vpc/vpc-0eaa2ca0786efe0b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0d7325cd16f201a77",
            "default_route_table_id": "rtb-09a4085bf9a5e7bad",
            "default_security_group_id": "sg-0ed0bac4bb65a83a6",
            "dhcp_options_id": "dopt-984eb4f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eaa2ca0786efe0b3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a4085bf9a5e7bad",
            "owner_id": "486074612436",
            "tags": {
              "Name": "VPC2"
            }
          }
        }
      ]
    }
  ]
}